--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
     
     <h1>Biography</h1>
 
-    <p>Niels Dickson is a graduate student in the Language Science department at the University of California, Irvine. He is co-advised by Dr. Lisa Pearl and Dr. Richard Futrell. Currently, he is working on a research project addressing questions of language acquisition and noisy representation.</p>
+    <p>Niels is a graduate student in the Language Science department at the University of California, Irvine. He is co-advised by Dr. Lisa Pearl and Dr. Richard Futrell. His research investigates questions in the field of language acquisition with a focus on syntactic representation and computational models of representation.</p>
 
 
     <div class="row">
