--- a/publication/dickson-2022-learning/index.html
+++ b/publication/dickson-2022-learning/index.html
@@ -754,8 +754,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://scholarworks.umass.edu/cgi/viewcontent.cgi?article=1255&amp;context=scil" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
