--- a/index.html
+++ b/index.html
@@ -1028,8 +1028,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://scholarworks.umass.edu/cgi/viewcontent.cgi?article=1255&amp;context=scil" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
