--- a/publication/index.html
+++ b/publication/index.html
@@ -723,8 +723,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://scholarworks.umass.edu/cgi/viewcontent.cgi?article=1255&amp;context=scil" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
