--- a/publication/dickson-2021-pos/index.html
+++ b/publication/dickson-2021-pos/index.html
@@ -733,6 +733,8 @@
 
 
 
+  
+
 
 
 
@@ -754,6 +756,10 @@
   
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/dickson-2021-pos/dickson-2021-pos.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
