--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/dickson-2021-pos/dickson-2021-pos.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
